--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "android"
   ],
   "repository": "git@github.com:sylvain-abadie/react-native-leveldb.git",
+  "author": "Chris Savvopoulos <savvopoulos@gmail.com> (https://github.com/savv)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sylvain-abadie/react-native-leveldb/issues"
