--- a/android/build.gradle
+++ b/android/build.gradle
@@ -60,7 +60,7 @@ android {
       cmake {
         cppFlags "-fexceptions", "-frtti", "-std=c++1y", "-DONANDROID"
         abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
-        arguments "-DCMAKE_BUILD_TYPE=Release", 
+        arguments "-DCMAKE_BUILD_TYPE=Release",
                   "-DANDROID_STL=c++_shared",
                   "-DNODE_MODULES_DIR=${nodeModules}"
       }
@@ -78,7 +78,7 @@ android {
   }
 
   packagingOptions {
-    excludes = ["**/libc++_shared.so", "**/libfbjni.so", "**/libjsi.so", "**/libreactnativejni.so", "**/libfolly_json.so", "**/libreanimated.so", "**/libjscexecutor.so", "**/libhermes.so"]
+    excludes = ["**/libc++_shared.so", "**/libfbjni.so", "**/libjsi.so", "**/libreactnativejni.so", "**/libfolly_json.so", "**/libreanimated.so", "**/libjscexecutor.so", "**/libhermes.so", "**/MANIFEST.MF"]
   }
 
   buildTypes {
