--- a/android/build.gradle
+++ b/android/build.gradle
@@ -58,7 +58,7 @@ android {
     versionName "1.0"
     externalNativeBuild {
       cmake {
-        cppFlags "-fexceptions", "-frtti", "-std=c++1y", "-DONANDROID", "-DMPACK_BUILDER_INTERNAL_STORAGE=1", "-DMPACK_OPTIMIZE_FOR_SIZE=0"
+        cppFlags "-fexceptions", "-frtti", "-std=c++1y", "-DONANDROID"
         abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
         arguments "-DCMAKE_BUILD_TYPE=Release",
                   "-DANDROID_STL=c++_shared",
