--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -4,3 +4,10 @@ include ':app'
 
 include ':reactnativeleveldb'
 project(':reactnativeleveldb').projectDir = new File(rootProject.projectDir, '../../android')
+
+includeBuild('../node_modules/react-native-gradle-plugin')
+
+if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
+    include(":ReactAndroid")
+    project(":ReactAndroid").projectDir = file('../node_modules/react-native/ReactAndroid')
+}
