--- a/package.json
+++ b/package.json
@@ -51,20 +51,20 @@
     "registry": "https://npm.pkg.github.com"
   },
   "devDependencies": {
-    "@react-native-community/eslint-config": "^2.0.0",
+    "@react-native-community/eslint-config": "^3.0.3",
     "@release-it/conventional-changelog": "^2.0.0",
     "@types/jest": "^26.0.0",
     "@types/react": "^17.0.2",
-    "@types/react-native": "0.66.15",
+    "@types/react-native": "~0.67.6",
     "eslint": "^7.2.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^26.0.1",
-    "pod-install": "^0.1.0",
-    "prettier": "^2.0.5",
+    "pod-install": "^0.1.38",
+    "prettier": "^2.7.1",
     "react": "17.0.2",
-    "react-native": "0.66.4",
-    "react-native-builder-bob": "^0.18.1",
+    "react-native": "0.68.2",
+    "react-native-builder-bob": "^0.18.3",
     "release-it": "^14.10.0",
     "typescript": "^4.1.3"
   },
